[project]
name = "pi-camera"
version = "0.1.0"
requires-python = ">=3.11"
dynamic = ["dependencies", "dev-dependencies"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.in"] }
dev-dependencies = { file = ["requirements-dev.in"] }

[tool.ruff]
target-version = "py311"

[tool.setuptools]
py-modules = []
